<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="15dp"
    tools:context="com.ctflab.locker.view.EmailChangeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_change_current"
            android:textAppearance="@style/text_14_medium"
            android:textColor="@color/text_blue" />

        <TextView
            android:id="@+id/txtChangeEmailCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="ABC@abc.com"
            android:textAppearance="@style/text_16_regular"
            android:textColor="@color/text_black_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/email_change_title"
            android:textAppearance="@style/text_14_medium"
            android:textColor="@color/text_blue" />

        <EditText
            android:id="@+id/edtChangeEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/email_add_error"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/text_16_regular"
            android:textColor="@color/text_black_1"
            android:textColorHint="@color/text_red" />
    </LinearLayout>

    <Button
        android:id="@+id/btnChangeEmailSave"
        style="@style/button_single"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:text="@string/email_change_save" />
</RelativeLayout>
